--- a/src/content/context-menu.module.less
+++ b/src/content/context-menu.module.less
@@ -59,17 +59,19 @@ button {
 .postTile {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 8px;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    height: 100px;
+    text-align: left;
+    height: 66px;
     border-radius: 8px;
     overflow: hidden;
     flex-shrink: 0;
     background: #999999;
     text-decoration: none !important;
+    box-sizing: border-box;
+    padding: 8px;
 
     h5 {
         margin: 0px;
@@ -77,15 +79,16 @@ button {
         color: #FFFFFF;
         text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
         z-index: 10;
-        padding: 8px;
+        flex-basis: 100%;
     }
 
     .posterSquare{
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         border-radius: 8px;
         object-fit: cover;
         z-index: 10;
+        flex-shrink: 0;
     }
 
     .posterBg {
