--- a/src/content/context-menu.module.less
+++ b/src/content/context-menu.module.less
@@ -68,7 +68,6 @@ button {
     border-radius: 8px;
     overflow: hidden;
     flex-shrink: 0;
-    background: #999999;
     text-decoration: none !important;
     box-sizing: border-box;
     padding: 8px;
@@ -80,6 +79,27 @@ button {
         text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
         z-index: 10;
         flex-basis: 100%;
+    }
+
+    .remove{
+        font-size: 18px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 20;
+        top: 0px;
+        left: 0px;
+        color: #FF0000;
+        background: #ffffff;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: transform 0.2s ease;
+        &:hover{
+            transform: scale(1.1);
+        }
     }
 
     .posterSquare{
@@ -101,6 +121,8 @@ button {
         transform: scale(1.5);
         filter: brightness(0.5) blur(5px);
         transition: all 0.5s ease;
+        z-index: -1;
+        background: #999999;
     }
 
     &:hover {
