--- a/src/content/context-menu.module.less
+++ b/src/content/context-menu.module.less
@@ -11,12 +11,11 @@
     flex-direction: column;
     justify-content: center;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
-    margin: 10px;
-    margin-bottom: 80px;
     animation: enter 0.3s ease both;
     width: 250px;
     min-height: 150px;
     box-sizing: border-box;
+    margin-right: 10px;
     
 
     &.dark {
