--- a/src/content/app.module.less
+++ b/src/content/app.module.less
@@ -13,6 +13,7 @@
     height: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     animation: growProgress 1s ease-in-out both;
+    z-index: 100;
 }
 
 @keyframes growProgress {
