Theme improvements, kill switch, darkmode toggle

--- a/src/action/style.less
+++ b/src/action/style.less
@@ -1,12 +1,23 @@
-body {
+@import '../shared/theme.less';
+
+body, html{
+    margin: 0;
+}
+
+.root:extend(.floaty-theme-light) {
     font-family: sans-serif;
     width: 350px;
     min-height: 200px;
     text-align: center;
-    font-size: 14px;
-    color: #ffffff;
-    background: #1e2a37;
-    padding: 8px;
+    font-size: 16px;
+    color: var(--textColor);
+    background: var(--bgColor);
+    padding: 16px;
+
+    &.dark:extend(.floaty-theme-dark) {
+        background: var(--bgColor);
+        color: var(--textColor);
+    }
 }
 
 textarea {
@@ -19,11 +30,12 @@ textarea {
     box-sizing: border-box;
     resize: vertical;
     margin: 8px 0px;
-    background: #2a3b4d;
+    background: var(--bgColorLighter);
+    font-size: 12px;
 }
 
 button {
-    background: #0489fa;
+    background: var(--primaryColor);
     color: #ffffff;
     border: none;
     outline: none;
@@ -39,21 +51,44 @@ label {
 }
 
 #output {
-    color: rgba(255, 255, 255, 0.5);
+    color: var(--textColorLighter);
 }
 
 #input {
-    color: #ffffff;
+    color: var(--textColor);
+}
+
+.icon{
+    width: 36px;
+    height: 36px;
+    display: inline-block;
+    margin-right: 8px;
+    vertical-align: middle;
+}
+
+.header{
+    display: flex;
+    align-items: center;
+    text-align: left;
+    justify-content: space-between;
+
+    .title{
+        flex-basis: 100%;
+    }
+
+    .version{
+        opacity: 0.5;
+    }
 }
 
 .message {
-    background: rgba(42, 59, 77, 0.6);
+    background: var(--bgColorTransparent);
     font-weight: bold;
     backdrop-filter: blur(10px);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
     box-sizing: border-box;
     padding: 16px;
-    border-radius: 4px;
+    border-radius: 8px;
     position: absolute;
     top: 0;
     left: 0;
@@ -69,7 +104,7 @@ label {
 
     .progress {
         margin-top: 8px;
-        background: #bcd4e4;
+        background: var(--primaryColor);
         height: 4px;
         width: 0;
         border-radius: 4px;
